objects/Custom_Opportunity_Splits__c.object
<CustomObject>
    <fields>
        <fullName>BCT_Factor_Pct__c</fullName>
        <description>If this record is a Revenue split the pct displayed is the split amount / by the BCT Factor (combination of Product Family and Bookings Classification).  If the record is an Overlay split the pct displayed is the split amount / Oppy Amount.</description>
        <formula>IF(ISPICKVAL(Split_Type__c, "Revenue"), Split_Amount__c / BCT_Factor_Total__c , Split_Amount__c /  Opportunity__r.Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this record is a Revenue split the pct displayed is the split amount / by the BCT Factor (combination of Product Family and Bookings Classification).  If the record is an Overlay split the pct displayed is the split amount / Oppy Amount.</inlineHelpText>
        <label>BCT Factor Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BCT_Factor_Total__c</fullName>
        <description>Sum of all the bookings classification records that have the same Product Family and Bookings Classification.</description>
        <label>BCT Factor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Classification_Record__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Revenue splits should always sum to the Booking Classification combination of Product Family and Bookings Classification (PF x BC).</description>
        <label>Booking Classification Record</label>
        <referenceTo>Booking_Classification__c</referenceTo>
        <relationshipLabel>Custom Opportunity Splits</relationshipLabel>
        <relationshipName>Custom_Opportunity_Splits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bookings_Classification__c</fullName>
        <description>Indicates 1 of 4 bookings classifications as defined by the business. Bookings Classifications are NBB (New Booked Business), MYD (Multi-Year Deal), Renewal and Other.</description>
        <label>Bookings Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookings_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <description>User defined field to indicate the nature of a Team Members contribution.</description>
        <label>Credit Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Split_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                    <default>true</default>
                    <label>Not Specified</label>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Ownership Group</fullName>
                </value>
                <value>
                    <fullName>Management Company</fullName>
                </value>
                <value>
                    <fullName>Ad Agency</fullName>
                </value>
                <value>
                    <fullName>Event Cloud</fullName>
                </value>
                <value>
                    <fullName>TSC Team</fullName>
                </value>
                <value>
                    <fullName>OS DS Team</fullName>
                </value>
                <value>
                    <fullName>VST</fullName>
                </value>
                <value>
                    <fullName>Demo/RFP Team</fullName>
                </value>
                <value>
                    <fullName>IQ Team</fullName>
                </value>
                <value>
                    <fullName>Mobile Solutions Team</fullName>
                </value>
                <value>
                    <fullName>Business Transient</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>AM Influence</fullName>
                </value>
                <value>
                    <fullName>AM-HC</fullName>
                </value>
                <value>
                    <fullName>Auxiliary Sales - HC</fullName>
                </value>
                <value>
                    <fullName>International DS</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>Display ID of the Parent Opportunity.</description>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Standard Opportunity is Master to Custom Opportunity splits.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Custom Opportunity Splits</relationshipLabel>
        <relationshipName>Custom_Opportunity_Splits1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Origin_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the split was created via the origin process.</description>
        <label>Origin Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>A mid level categorization of an individual product that is used in classification of bookings line item.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Amount_USD__c</fullName>
        <description>This is the split amount translated into USD dollars according to the exchange rate written on the Parent Opportunity.</description>
        <formula>Split_Amount__c / Opportunity__r.Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <description>The portion of the total revenue split line item as defined by the combination of Product Family and Bookings Classifications.</description>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Type__c</fullName>
        <description>Revenue is split to each team member according to Product Family and Bookings Classification combination.  The sum of the revenue splits must equal the amount on the related opportunity.  Overlay splits can be applied if credit is greater than 100% of the sum of the opportunity.</description>
        <label>Split Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Overlay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member_Role__c</fullName>
        <description>Lookup to Team Member Role Name</description>
        <formula>Team_Member__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies to whom the opportunity spit is being assigned.</description>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Opportunity_Splits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weighted_Split_Amount_USD__c</fullName>
        <description>This is the weighted split amount translated into USD dollars according to the exchange rate written on the Parent Opportunity.</description>
        <formula>(Split_Amount__c / Opportunity__r.Exchange_Rate__c)  * Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Split Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Split_Amount__c</fullName>
        <description>Opportunity probability portion of split.</description>
        <formula>Split_Amount__c *   Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>index__c</fullName>
        <label>index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Custom Opportunity Splits (COS) has been designed to give users enhanced splits capabilities for Revenue and Overlay type splits.  In addition to Team Members, COS supports two additional split dimensions, Product Family and Bookings Classifications.</description>
    <label>Custom Opportunity Splits</label>
    <nameField>
        <displayFormat>COS-{00000}</displayFormat>
        <label>Split ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Opportunity Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>